--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,10 +13,10 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Set up Docker Build
-      uses: docker/setup-buildx-action@v1
+      uses: docker/setup-buildx-action@v2
 
     - name: Login to GitHub Container Registry
-      uses: docker/login-action@v1
+      uses: docker/login-action@v2
       with:
         registry: ghcr.io
         username: ${{ github.actor }}
@@ -27,7 +27,12 @@ jobs:
       continue-on-error: true
 
     - name: Build Docker image
-      run: docker-compose build
+      uses: docker/build-push-action@v3
+      with:
+        file: ./docker/Dockerfile
+        platforms: linux/amd64
+        push: true
+        tags: ghcr.io/rust-lang-ja/book-ja-pdf:latest
 
     - name: PDF build
       run: docker-compose up --abort-on-container-exit
