--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,36 +1,14 @@
-FROM alpine:3.16
+FROM ubuntu:22.04
 
 LABEL maintainer="YOSHIMRUA Hikaru <yyu [at] mental.poker>"
 
-ENV TEXLIVE_DEPS \
-    xz \
-    tar \
-    fontconfig-dev \
-    zlib-dev \
-    gnupg \
-    musl-dev \
-    alpine-sdk \
-    pkgconfig \
-    gmp-dev
-
-ENV TEXLIVE_PATH /usr/local/texlive
-
-ENV FONT_DEPS \
-    unzip \
-    fontconfig-dev
-
-ENV FONT_PATH /usr/share/fonts/
-
 ARG TARGETARCH
 
-ENV PANDOC_VERSION 2.18
-ENV PANDOC_DOWNLOAD_URL https://github.com/jgm/pandoc/releases/download/$PANDOC_VERSION/pandoc-$PANDOC_VERSION-linux-$TARGETARCH.tar.gz
-ENV PANDOC_ROOT /usr/local/bin/pandoc
+RUN apt-get update
 
 ENV PERSISTENT_DEPS \
-    py-pip \
-    rust \
-    cargo \
+    python3-pip \
+    build-essential \
     curl \
     make \
     perl \
@@ -38,18 +16,15 @@ ENV PERSISTENT_DEPS \
     inkscape \
     bash \
     git \
-    ca-certificates
-
-ENV PATH $TEXLIVE_PATH/bin/x86_64-linux:$TEXLIVE_PATH/bin/x86_64-linuxmusl:/root/.cargo/bin:$PATH
-
-RUN apk upgrade --update
-
-# Install basic dependencies
-RUN apk add --no-cache --virtual .persistent-deps $PERSISTENT_DEPS
+    lz4 \
+    ca-certificates \
+    unzip \
+    fontconfig
+RUN apt-get install -y --no-install-recommends $PERSISTENT_DEPS
 
 # Setup fonts
+ENV FONT_PATH /usr/share/fonts/
 RUN mkdir -p $FONT_PATH && \
-    apk add --no-cache --virtual .font-deps $FONT_DEPS && \
     # Noto Serif
     curl -sSfLO https://noto-website-2.storage.googleapis.com/pkgs/NotoSerif-unhinted.zip && \
       unzip -d NotoSerif-unhinted NotoSerif-unhinted.zip && \
@@ -85,11 +60,13 @@ RUN mkdir -p $FONT_PATH && \
       unzip OTF-source-code-pro-2.038R-ro-1.058R-it.zip -d source-code-pro && \
       cp source-code-pro/*.otf $FONT_PATH && \
       rm -rf OTF-source-code-pro-2.038R-ro-1.058R-it.zip source-code-pro && \
-    fc-cache -f -v && \
-    apk del .font-deps 
+    fc-cache -f -v
 
 # Install Pandoc
-RUN wget -qO- "$PANDOC_DOWNLOAD_URL" | tar -xzf - && \
+ENV PANDOC_VERSION 2.19
+ENV PANDOC_DOWNLOAD_URL https://github.com/jgm/pandoc/releases/download/$PANDOC_VERSION/pandoc-$PANDOC_VERSION-linux-$TARGETARCH.tar.gz
+ENV PANDOC_ROOT /usr/local/bin/pandoc
+RUN curl -sSfL "$PANDOC_DOWNLOAD_URL" | tar -xzf - && \
     cp pandoc-$PANDOC_VERSION/bin/pandoc $PANDOC_ROOT && \
     rm -Rf pandoc-$PANDOC_VERSION/
 
@@ -100,15 +77,18 @@ RUN pip install --upgrade pip && \
     rm requirements.txt
 
 # Update Rust and cargo
-RUN curl https://sh.rustup.rs -sSf | sh -s -- -y && \
+ENV RUST_VERSION stable
+ENV PATH /root/.cargo/bin:$PATH
+RUN curl https://sh.rustup.rs -sSf | sh -s -- -y --default-toolchain $RUST_VERSION && \
     rustup update
 
 # Install mdBook
 RUN cargo install mdbook
 
 # Install TeXLive
-RUN apk add --no-cache --virtual .texlive-deps $TEXLIVE_DEPS && \
-    mkdir /tmp/install-tl-unx && \
+ARG TEXLIVE_OPTIONS=""
+ENV TEXLIVE_PATH /usr/local/texlive
+RUN mkdir /tmp/install-tl-unx && \
     curl -sSfL http://mirror.ctan.org/systems/texlive/tlnet/install-tl-unx.tar.gz | \
       tar -xz -C /tmp/install-tl-unx --strip-components=1 && \
     printf "%s\n" \
@@ -117,16 +97,26 @@ RUN apk add --no-cache --virtual .texlive-deps $TEXLIVE_DEPS && \
       "option_doc 0" \
       "option_src 0" \
       > /tmp/install-tl-unx/texlive.profile && \
-    /tmp/install-tl-unx/install-tl \
-      -profile /tmp/install-tl-unx/texlive.profile && \
-    tlmgr install latexmk collection-luatex collection-langjapanese \
+    if [[ "$TARGETARCH" = "arm64" ]]; then \
+      /tmp/install-tl-unx/install-tl \
+        -profile /tmp/install-tl-unx/texlive.profile \
+        $TEXLIVE_OPTIONS \
+        -force-platform aarch64-linux; \
+    else \
+      /tmp/install-tl-unx/install-tl \
+        -profile /tmp/install-tl-unx/texlive.profile \
+        $TEXLIVE_OPTIONS; \
+    fi
+
+ENV PATH $TEXLIVE_PATH/bin/aarch64-linux:$TEXLIVE_PATH/bin/x86_64-linux:/bin:$PATH
+RUN tlmgr install latexmk collection-luatex collection-langjapanese \
       collection-fontsrecommended type1cm mdframed needspace fncychap \
       everyhook svn-prov enumitem background everypage zref && \
-    luaotfload-tool -v -vvv -u && \
+    luaotfload-tool -u -vvv && \
     rm -fr /tmp/install-tl-unx && \
-    apk del .texlive-deps
+    apt-get -y clean
 
-VOLUME ["/workdir"]
+VOLUME ["/workdir", "/root/.cargo"]
 
 WORKDIR /workdir
 
