--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,17 +22,16 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Get Docker image
-      run: docker-compose pull
-      continue-on-error: true
-
     - name: Build Docker image
-      uses: docker/build-push-action@v3
+      uses: docker/build-push-action@v5
       with:
         file: ./docker/Dockerfile
         platforms: linux/amd64
         push: ${{ github.ref == 'refs/heads/master' }}
+        load: ${{ github.ref != 'refs/heads/master' }}
         tags: ghcr.io/rust-lang-ja/book-ja-pdf:latest
+        cache-from: type=gha
+        cache-to: type=gha,mode=max
 
     - name: PDF build
       run: docker-compose up --abort-on-container-exit
