--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,10 +34,10 @@ jobs:
         cache-to: type=gha,mode=max
 
     - name: PDF build
-      run: docker-compose up --abort-on-container-exit
+      run: docker compose up --abort-on-container-exit
 
     - name: Push PDF file
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v4
       with:
         name: trpl book japanese
         path: book.pdf
@@ -51,7 +51,7 @@ jobs:
       - uses: actions/checkout@v2
       
       - name: Download PDF
-        uses: actions/download-artifact@v2
+        uses: actions/download-artifact@v4
         with:
           name: trpl book japanese
           path: ./build/
