--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -20,13 +20,13 @@ jobs:
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
     - name: Get Docker image
-      run: docker-compose pull
+      run: docker compose pull
 
     - name: PDF build
-      run: docker-compose up --abort-on-container-exit
+      run: docker compose up --abort-on-container-exit
 
     - name: Push PDF file
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v4
       with:
         name: trpl book japanese
         path: book.pdf
@@ -41,7 +41,7 @@ jobs:
       - uses: actions/checkout@v2
       
       - name: Download PDF
-        uses: actions/download-artifact@v2
+        uses: actions/download-artifact@v4
         with:
           name: trpl book japanese
           path: ./build/
